--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,21 @@
+@font-face {
+    
+    font-family: 'DMSans-regular';
+    src: url('./assets/fonts/DM_Sans/static/DMSans-Regular.ttf');
+    font-family: 'DMSans-bold';
+    src: url('./assets/fonts/DM_Sans/static/DMSans-Bold.ttf');
+
+}
 
 
 :root {
     --background-img: url('./assets/images/bg-light-theme.png');
+    --base-color: #F2F2F7;
+    --text-color: #12131A;
+    --secondary-text-color: #2A2B37;
+    --purple: #D3A0FA;
+    --yellow: #FF9F00;
+    --orange: #FE8159;
 }
 
 
@@ -10,14 +24,76 @@
     box-sizing: border-box;
     padding:0;
     margin: 0;
-    background-image: var(--background-img);
 }
 
-.darkmode {
+/* .darkmode {
    --background-img: url('./assets/images/bg-dark-theme.png');
-}
+} */
 
 body {
     background-image: var(--background-img);
     height: 100vh;
+    font-family: 'DMSans-regular', sans-serif;
+}
+
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .logo img {
+        width: 185px;
+        height: 30px;
+    }
+    button {
+        border: none;
+        cursor: pointer;
+        background: var(--base-color);
+        padding: 5px;
+        svg {
+            width: 20px;
+            height: 20px;
+            fill: var(--base-color);
+        }
+        border-radius: 5px;
+    }
+}
+
+.container {
+    padding: 16px;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    h1 {
+        font-size: 40px;
+        color: var(--text-color);
+        font-family: 'DMSans-bold';
+        text-align: center;
+        line-height: 1;
+        letter-spacing: -3px;
+        margin-bottom: 32px;
+    
+    }
+    textarea {
+        width: 100%;
+        height: 200px;
+        padding: 10px;
+        border-radius: 5px;
+        border: none;
+        background-color: var(--base-color);
+        color: var(--secondary-text-color);
+        font-size: 16px;
+        font-family: 'Poppins', sans-serif;
+        resize: none;
+    }
+
+}
+
+.input-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px 0;
 }
