--- a/styles.css
+++ b/styles.css
@@ -99,18 +99,21 @@ header {
 .input-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 12px;
     margin: 10px 0;
 }
 
 .tiles {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 16px;
     margin-top: 16px;
+    color: var(--text-color);
     .tile {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         height: 116px;
         width: 100%;
         border-radius: 10px;
@@ -132,5 +135,56 @@ header {
     .sentence-count {
         background-color: var(--orange);
     }
+    .stat {
+        display: flex;
+        flex-direction: column;
+        margin: 20px;
+        gap: 10px;
+        h2 {
+            font-size: 40px;
+        }
+        p {
+           font-size: 20px;
+        }
+    }
 
+}
+
+
+.progress-bar-container {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+
+.progress-bar-title {
+    margin: 24px 0 20px 0;
+    font-size: 24px;
+}
+.progress-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 14px;
+   
+    
+}
+
+
+.progress {
+    display: flex;
+    width: 100%;
+}
+.bar-visible {
+    background-color: var(--purple);
+    height: 12px;
+    width: 30%;
+    border-radius: 100px;
+}
+
+.bar-faint {
+    background-color: var(--base-color);
+    height: 12px;
+    width: 70%;
+    border-radius: 100px;
 }
