--- a/styles.css
+++ b/styles.css
@@ -230,10 +230,15 @@ textarea:focus {
 }
 
 
+.letter {
+    width:15px;
+}
+
 
 /* Media Queries */
 
 @media screen and (min-width: 768px) {
+
 
    .container {
     padding: 32px;
@@ -243,8 +248,21 @@ textarea:focus {
      }
     }
 
+    header {
+    .logo img{
+            width: 245px;
+        
+    }
+    }
+    .progress {
+        width: 100%;
+        border-radius: 100px;
+        background-color: var(--base-color);
+    }
+
     .tiles {
         flex-direction: row;
+        margin: 32px 0;
         .tile {
             height: 150px;
         }
@@ -260,9 +278,16 @@ textarea:focus {
             }
         }
     }
+
+    .input-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+
+
+    .char-count {
+        margin-left: auto;
+    }
     
 }
 
-.letter {
-    width:15px;
-}
