--- a/styles.css
+++ b/styles.css
@@ -298,5 +298,9 @@ textarea:focus {
     .container {
         width: 70%;
         margin:0 auto;
+        h1 {
+            max-width: 510px;
+            margin: 48px auto;
+        }
     }
 }
