Added styles to checkboxes

--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,52 @@ textarea:focus {
 }
 
 
+/* Checkbox styles */
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    cursor: pointer;
+    /* margin-right: 16px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--text-color);
+    border-radius: 4px;
+}
+
+input[type="checkbox"]::after{
+    font-family: "Font Awesome 5 Free";
+    font-weight: 1000;
+    content: "\f00c";
+    font-size: 12px;
+    color: var(--text-color);
+    display: none;
+}
+input[type="checkbox"]:hover, input[type="checkbox"]:focus  {
+    border:1px solid var(--purple);
+}
+
+
+input[type="checkbox"]:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px var(--purple);
+}
+
+input[type="checkbox"]:checked {
+    background-color: var(--purple);
+}
+input[type="checkbox"]:checked::after{
+    display: block;
+}
+
+.checkbox-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 580px) {
