--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 :root {
-    --background-img: url('./assets/images/bg-light-theme.png');
-    --base-color: #F2F2F7;
-    --text-color: #12131A;
-    --secondary-text-color: #2A2B37;
-    --purple: #D3A0FA;
-    --yellow: #FF9F00;
+    --neutral-900: #12131A;
+    --neutral-800: #21222C;
+    --neutral-700: #2A2B37;
+    --neutral-600: #404254;
+    --neutral-200: #E4E4EF;
+    --neutral-100: #F2F2F7;
+    --neutral-0: #FFFFFF;
+
+    --blue-500: #C27CF8;
+    --blue-400: #D3A0FA;
+    --yellow-500: #FF9F00;
+    --orange-800: #DA3701;
     --orange: #FE8159;
+
+    --background-img: url('./assets/images/bg-light-theme.png');
+
 }
-
-
 
 * {
     box-sizing: border-box;
-    padding:0;
+    padding: 0;
     margin: 0;
 }
 
-/* .darkmode {
+.darkmode {
    --background-img: url('./assets/images/bg-dark-theme.png');
    --base-color: #1f1f22;
    --text-color: #fff;
    --secondary-text-color: #fff;
-} */
+}
 
 body {
     background-image: var(--background-img);
     height: 100vh;
     font-family: "DM Sans", sans-serif;
     color: var(--text-color);
+    transition: background-image 0.3s, color 0.3s;
 }
-
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .logo img {
-        width: 185px;
-        height: 30px;
-    }
-    button {
-        border: none;
-        cursor: pointer;
-        background: var(--base-color);
-        padding: 5px;
-        svg {
-            width: 20px;
-            height: 20px;
-            fill: var(--base-color);
-        }
-        border-radius: 5px;
-    }
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+}
+
+header button {
+    border: none;
+    cursor: pointer;
+    background: var(--base-color);
+    padding: 5px;
+    border-radius: 5px;
+}
+
+header button svg {
+    width: 20px;
+    height: 20px;
+    fill: var(--base-color);
 }
 
 .container {
@@ -62,18 +74,17 @@ header {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    h1 {
-        font-size: 40px;
-        color: var(--text-color);
-        font-family: "DM Sans", sans-serif;
-        text-align: center;
-        line-height: 1;
-        letter-spacing: -1px;
-        margin-bottom: 32px;
-        margin-top: 16px;
-    
-    }
-    
+}
+
+.container h1 {
+    font-size: 40px;
+    color: var(--text-color);
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    line-height: 1;
+    letter-spacing: -1px;
+    margin-bottom: 32px;
+    margin-top: 16px;
 }
 
 textarea {
@@ -89,9 +100,9 @@ textarea {
     resize: none;
     line-height: 1.5;
 }
-textarea:focus {
 
-    outline-color: #E4E4EF;
+textarea:focus {
+    outline: 1px solid blue;
 }
 
 .input-wrapper {
@@ -108,48 +119,51 @@ textarea:focus {
     gap: 16px;
     margin-top: 16px;
     color: var(--text-color);
-    .tile {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 116px;
-        width: 100%;
-        border-radius: 10px;
-    
-      }
-       
-    }
-    .char {
-        background-image: url('./assets/images/pattern-character-count.svg');
-        background-repeat: no-repeat;
-        background-position: right;
-        background-color: var(--purple);
-    }
-    .word-count {
-        background-color: var(--yellow);
-        background-image: url('./assets/images/pattern-word-count.svg');
-        background-repeat: no-repeat;
-        background-position: right;
-    }
-    .sentence-count {
-        background-image: url('./assets/images/pattern-sentence-count.svg');
-        background-repeat: no-repeat;
-        background-position: right;
-        background-color: var(--orange);
-    }
-    .stat {
-        display: flex;
-        flex-direction: column;
-        margin-left: 20px;
-        h2 {
-            font-size: 40px;
-        }
-        p {
-           font-size: 20px;
-        }
-    }
+}
 
+.tiles .tile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 116px;
+    width: 100%;
+    border-radius: 10px;
+}
 
+.char {
+    background-image: url('./assets/images/pattern-character-count.svg');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: var(--purple);
+}
+
+.word-count {
+    background-color: var(--yellow);
+    background-image: url('./assets/images/pattern-word-count.svg');
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.sentence-count {
+    background-image: url('./assets/images/pattern-sentence-count.svg');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: var(--orange);
+}
+
+.stat {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.stat h2 {
+    font-size: 40px;
+}
+
+.stat p {
+    font-size: 20px;
+}
 
 .progress-bar-container {
     display: flex;
@@ -160,28 +174,26 @@ textarea:focus {
 .progress-bar-title {
     margin: 24px 0 20px 0;
     font-size: 24px;
-   font-family: "DM Sans", sans-serif;
-   
+    font-family: "DM Sans", sans-serif;
 }
 
 .letter {
     width: 15px;
 }
+
 .progress-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 14px;
-   
-    
 }
-
 
 .progress {
     width: 212px;
     border-radius: 100px;
     background-color: var(--base-color);
 }
+
 .bar-visible {
     background-color: var(--purple);
     height: 12px;
@@ -190,23 +202,21 @@ textarea:focus {
 }
 
 .bar-faint {
-   
     height: 12px;
     width: 70%;
-    
 }
 
 .percentage {
     text-align: right;
     width: 87px;
 }
+
 .toggle-overflow {
     display: flex;
     align-items: center;
     gap: 8px;
     margin: 20px 0;
     font-size: 20px;
-    
 }
 
 .letter-E {
@@ -229,11 +239,9 @@ textarea:focus {
     width: 20%;
 }
 
-
 .letter {
-    width:15px;
+    width: 15px;
 }
-
 
 /* Checkbox styles */
 input[type="checkbox"] {
@@ -250,7 +258,7 @@ input[type="checkbox"] {
     border-radius: 4px;
 }
 
-input[type="checkbox"]::after{
+input[type="checkbox"]::after {
     font-family: "Font Awesome 5 Free";
     font-weight: 1000;
     content: "\f00c";
@@ -258,10 +266,10 @@ input[type="checkbox"]::after{
     color: var(--text-color);
     display: none;
 }
-input[type="checkbox"]:hover, input[type="checkbox"]:focus  {
-    border:1px solid var(--purple);
-}
 
+input[type="checkbox"]:hover, input[type="checkbox"]:focus {
+    border: 1px solid var(--purple);
+}
 
 input[type="checkbox"]:focus {
     outline: none;
@@ -271,7 +279,8 @@ input[type="checkbox"]:focus {
 input[type="checkbox"]:checked {
     background-color: var(--purple);
 }
-input[type="checkbox"]:checked::after{
+
+input[type="checkbox"]:checked::after {
     display: block;
 }
 
@@ -282,25 +291,21 @@ input[type="checkbox"]:checked::after{
 }
 
 /* Media Queries */
-
 @media screen and (min-width: 580px) {
-
-
-   .container {
-    padding: 32px;
-    h1 {
+    .container {
+        padding: 32px;
+    }
+    
+    .container h1 {
         font-size: 64px;
         letter-spacing: 1px;
-     }
     }
 
-    header {
-    .logo img{
-            width: 245px;
-            height: 40px;
-        
+    .logo{
+        width: 245px;
+        height: 40px;
     }
-    }
+
     .progress {
         width: 100%;
         border-radius: 100px;
@@ -310,20 +315,23 @@ input[type="checkbox"]:checked::after{
     .tiles {
         flex-direction: row;
         margin: 32px 0;
-        .tile {
-            height: 150px;
-        }
-        .stat {
-            display: flex;
-            justify-content: center;
-            h2 {
-                font-size: 64px;
-            }
+    }
 
-            p {
-                font-size: 20px;
-            }
-        }
+    .tiles .tile {
+        height: 150px;
+    }
+
+    .tiles .stat {
+        display: flex;
+        justify-content: center;
+    }
+
+    .tiles .stat h2 {
+        font-size: 64px;
+    }
+
+    .tiles .stat p {
+        font-size: 20px;
     }
 
     .input-wrapper {
@@ -331,22 +339,19 @@ input[type="checkbox"]:checked::after{
         flex-direction: row;
     }
 
-
     .char-count {
         margin-left: auto;
     }
-    
 }
-
-
 
 @media screen and (min-width: 1024px) {
     .container {
         width: 70%;
-        margin:0 auto;
-        h1 {
-            max-width: 510px;
-            margin: 48px auto;
-        }
+        margin: 0 auto;
+    }
+    
+    .container h1 {
+        max-width: 510px;
+        margin: 48px auto;
     }
 }
