--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ textarea {
     height: 200px;
     padding: 10px;
     border-radius: 5px;
-    border: 2px solid var(--border-color);
+    border: 1px solid var(--border-color);
     background-color: var(--bg-color);
     color: var(--secondary-text-color);
     font-size: 16px;
@@ -123,8 +123,28 @@ textarea {
 }
 
 textarea:focus {
-    outline: 1px solid var(--blue-500);
-    box-shadow: 0 0 5px 2px var(--blue-500);
+    outline: none;
+    box-shadow: 0 0 10px 2px var(--blue-500);
+    border: 1px solid var(--blue-500);
+}
+
+textarea.warning:focus {
+    border: 1px solid var(--orange-800);
+    box-shadow: 0 0 10px 2px var(--orange-800);
+}
+
+.limit-warning {
+    display: none;
+    align-items: center;
+    gap: 10px;
+    color: var(--orange-800);
+    margin-top: 10px;
+    transition: all 0.3s;
+    
+}
+
+.limit-warning svg {
+    stroke: var(--orange-800);
 }
 
 .input-wrapper {
