Fixed character limit functionality

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@
     padding: 0;
     margin: 0;
 }
+
+
 /* Darkmode */
 .darkmode {
    --background-img: url('./assets/images/bg-dark-theme.png');
@@ -124,22 +126,22 @@ textarea {
 
 textarea:focus {
     outline: none;
-    box-shadow: 0 0 10px 2px var(--blue-500);
+    box-shadow: 0 0 10px 0px var(--blue-500);
     border: 1px solid var(--blue-500);
 }
 
 textarea.warning:focus {
     border: 1px solid var(--orange-800);
-    box-shadow: 0 0 10px 2px var(--orange-800);
+    box-shadow: 0 0 10px 0px var(--orange-800);
 }
 
 .limit-warning {
-    display: none;
-    align-items: center;
     gap: 10px;
     color: var(--orange-800);
     margin-top: 10px;
     transition: all 0.3s;
+    display: none;
+    align-items: center;
     
 }
 
@@ -160,7 +162,7 @@ textarea.warning:focus {
     justify-content: center;
     gap: 16px;
     margin-top: 16px;
-    color: var(--text-color);
+    color: var(--neutral-900);
 }
 
 .tiles .tile {
@@ -250,6 +252,7 @@ textarea.warning:focus {
 
 .percentage {
     text-align: right;
+    text-wrap: nowrap;
     width: 87px;
 }
 
@@ -259,6 +262,8 @@ textarea.warning:focus {
     gap: 8px;
     margin: 20px 0;
     font-size: 20px;
+    /* visibility: hidden; */
+    
 }
 
 .letter-E {
