--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
 
 /* Styling */
     --border-color: var(--neutral-200);
+    --border-input: var(--neutral-900);
     --bg-color: var(--neutral-100);
 
 }
@@ -42,6 +43,7 @@
    --primary-text-color: var(--neutral-100);
    --secondary-text-color: var(--neutral-200);
    --border-color: var(--neutral-600);
+   --border-input: var(--neutral-200);
    --bg-color: var(--neutral-700);
    
 }
@@ -354,7 +356,7 @@ input[type="checkbox"]:checked::after {
     text-align: center;
     background-color: transparent;
     border-radius: 6px;
-    border: 1px solid var(--border-color);  
+    border: 1px solid var(--border-input);  
     color: var(--secondary-text-color);
 
   
