--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,9 @@ textarea.warning:focus {
     display: flex;
     flex-direction: column;
     gap: 14px;
+    height: 160px;
+    overflow: hidden;
+    transition: height 20s ease;
 }
 
 .progress-bar-title {
@@ -259,13 +262,25 @@ textarea.warning:focus {
 }
 
 .toggle-overflow {
+    margin: 20px 0;
+    font-size: 20px;
+    cursor: pointer;
+    
+}
+
+.see-more, .see-less {
     display: flex;
     align-items: center;
     gap: 8px;
-    margin: 20px 0;
     font-size: 20px;
-    /* visibility: hidden; */
-    
+
+
+}
+
+
+
+.see-less {
+    display: none;
 }
 
 .letter-E {
